porting connie-core to JPMS